--- a/compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/BUILD.bazel
@@ -99,6 +99,7 @@ iree_compiler_cc_library(
         "@llvm-project//mlir:ArithUtils",
         "@llvm-project//mlir:ControlFlowInterfaces",
         "@llvm-project//mlir:DialectUtils",
+        "@llvm-project//mlir:GPUDialect",
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:LinalgDialect",
         "@llvm-project//mlir:Parser",
@@ -162,6 +163,7 @@ iree_gentbl_cc_library(
     td_file = "IREEGPUAttrs.td",
     deps = [
         ":td_files",
+        "//compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR:LoweringConfigInterfaceGen",
         "@llvm-project//mlir:SCFDeviceMappingInterfacesIncGen",
     ],
 )
