Adding device-side AMDGPU signal/queue utils. (#21042)
The signal and queue headers are derived from the HSA spec, ROCR
implementation, and LLVM device library/codegen.

--- a/runtime/src/iree/hal/drivers/amdgpu/device/CMakeLists.txt
+++ b/runtime/src/iree/hal/drivers/amdgpu/device/CMakeLists.txt
@@ -17,6 +17,9 @@ set(_BITCODE_HDRS
   "kernels.h"
   "support/common.h"
   "support/kernel_args.h"
+  "support/mutex.h"
+  "support/queue.h"
+  "support/signal.h"
 )
 
 #===------------------------------------------------------------------------===#
