[DispatchCreation] Add pass to hoist scalar ops out of dispatch regions (#21210)
CollapseDimensions pass introduces operations on dimension sizes both
inside and outside a dispatch that should be able to CSE. Because we
don't run CSE until after dispatch workgroups conversion, this results
in redundant workload values we can't fold away.

To avoid such redundancies, this patch introduces a new pass that hoists
scalar compute ops out of dispatch region. To keep behavior similar in
all other cases constants are cloned back into the dispatch.

--- a/compiler/src/iree/compiler/DispatchCreation/CMakeLists.txt
+++ b/compiler/src/iree/compiler/DispatchCreation/CMakeLists.txt
@@ -33,6 +33,7 @@ iree_cc_library(
     "FusionPreprocessing.cpp"
     "FusionUtils.cpp"
     "HoistEncodingOps.cpp"
+    "HoistUniformScalarCompute.cpp"
     "MaterializeDefaultWorkgroupCountRegion.cpp"
     "Passes.cpp"
     "PropagateEncodings.cpp"
