--- a/compiler/src/iree/compiler/DispatchCreation/BUILD.bazel
+++ b/compiler/src/iree/compiler/DispatchCreation/BUILD.bazel
@@ -36,6 +36,7 @@ iree_compiler_cc_library(
         "FusionPreprocessing.cpp",
         "FusionUtils.cpp",
         "HoistEncodingOps.cpp",
+        "HoistUniformScalarCompute.cpp",
         "MaterializeDefaultWorkgroupCountRegion.cpp",
         "Passes.cpp",
         "PropagateEncodings.cpp",
