--- a/compiler/src/iree/compiler/DispatchCreation/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/DispatchCreation/test/BUILD.bazel
@@ -31,6 +31,7 @@ iree_lit_test_suite(
             "form_dispatch_workgroups.mlir",
             "dispatch_linalg_ext_fusion.mlir",
             "hoist_encoding_ops.mlir",
+            "hoist_uniform_scalar_compute.mlir",
             "dispatch_linalg_on_tensors_default.mlir",
             "dispatch_linalg_on_tensors_fusion_with_transpose.mlir",
             "form_scalar_dispatches.mlir",
