[Codegen] Add pass to propagate constant offsets towards accesses (#21236)
The pass added in this patch attempts to bubble constant offsets which
are typical when computing the offset of unrolled hyperdimensional
memory accesses closer to the access. The motivation for this is
two-fold:

1. It enables better CSE opportunities earlier on by pulling out the
constant portions of [affine] arithmetic and leaving the
thread/workgroup id dependent portion alone, which typically is the same
across multiple accesses post vector unrolling.
2. By having constant additions be the last part of an offset
calculation, it increases the chance for the backend to utilize constant
offset fields for various targets.

Note that this is a problem somewhat unique to hyperdimensional code
generation. When unrolling the access of a simple 1-d vectorized load,
the constant offset can be easily separating from the base offset. With
unrolling of accesses of greater dimensionality, a linearization step
complicates extracting a shared constant offset.

This pass is added to the end of the LLVMGPU pipeline after vector
lowerings (so unrolling has kicked in) and before resolving swizzle
hints (the first place we expect to take advantage of the transformation
done here).

Additionally there was a premature call to LowerAffine in the LLVMGPU
pipeline dropped to make address computation work as expected, as affine
ops are introduced after that lowering, leading to unexpected mixing of
arith and affine.

--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -153,6 +153,7 @@ iree_compiler_cc_library(
         "PadDynamicAlloc.cpp",
         "PassUtils.cpp",
         "Passes.cpp",
+        "PropagateConstantOffsets.cpp",
         "PropagateDispatchSizeBounds.cpp",
         "PropagateReshapesByExpansion.cpp",
         "ReconcileTranslationInfo.cpp",
