[integrate|compiler] Drop carried LLVM reverts and use `ub.poison` in some transfer reads (#21259)
This integrate drops the carried over reverts:
- https://github.com/llvm/llvm-project/commit/e4de74ba11eadb47cf78afbabffbf2b1a50e7298
- https://github.com/llvm/llvm-project/commit/878d3594ed74cd1153bc5cba2cb7a449702cdf34

It also cherry-picks:
- https://github.com/iree-org/llvm-project/commit/011d622e4c21ad1c3d5fed3928ad9362006fa572

Finally, It also fixes breaks in IREE caused by those patches, and as
consequence it introduces the usage of `ub.poison` as padding in some
`vector.tranfer_read` operations that don't require padding.

---------

Signed-off-by: Fabian Mora <fabian.mora-cordero@amd.com>

--- a/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
@@ -227,6 +227,7 @@ iree_cc_library(
     MLIRTransformDialectTransforms
     MLIRTransformUtils
     MLIRTransforms
+    MLIRUBDialect
     MLIRValueBoundsOpInterface
     MLIRVectorDialect
     MLIRVectorToSCF
