[TensorExt] Add new operation that is a placeholder for modifying number of workgroups for split reduction. (#21314)
To implement split reduction, the dispatch that contains the partial
reduction needs workgroups to distribute the partial reduction operation
by itself. This is then multiplied by the number of workgroups needed to
run the parallel partial reductions in the same kernel. Since the exact
value of this is not necessarily known at dispatch formation time, but
is known after translating executables, a new operation is added to
represent the computation that will be materialized to compute the
change in the number of workgroups needed to run the parallel partial
reductions. This PR just adds this operation. Its
resolution/materialization will be done in a later PR.

Signed-off-by: MaheshRavishankar <mahesh.ravishankar@gmail.com>

--- a/compiler/src/iree/compiler/Dialect/TensorExt/IR/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/TensorExt/IR/test/CMakeLists.txt
@@ -16,6 +16,7 @@ iree_lit_test_suite(
   SRCS
     "dispatch_tensor_folding.mlir"
     "dispatch_workload_ordinal_folding.mlir"
+    "roundtrip.mlir"
   TOOLS
     FileCheck
     iree-opt
