--- a/compiler/src/iree/compiler/Codegen/Common/unittests/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/unittests/BUILD.bazel
@@ -17,8 +17,10 @@ iree_compiler_cc_test(
     srcs = ["TileSizeSelectionTest.cpp"],
     deps = [
         "//compiler/src/iree/compiler/Codegen/Common",
+        "//compiler/src/iree/compiler/Codegen/Dialect/CPU/IR:IREECPUDialect",
         "//compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR:IREECodegenDialect",
         "//compiler/src/iree/testing:gtest_main",
         "@com_google_googletest//:gtest",
+        "@llvm-project//mlir:IR",
     ],
 )
