[Codegen] Add AMDGPU specific narrow type emulation pass for AMDGPUDialect (#21333)
The alternative is to add a dialect interface, but that's overkill for
now. Splits out the pass implementation to a separate function to
avoid an AMDGPU dep in Codegen/Common.

--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -188,6 +188,7 @@ iree_compiler_cc_library(
     hdrs = [
         "BufferizationAnalysis.h",
         "CombineLayoutTransformation.h",
+        "EmulateNarrowType.h",
         "EncodingUtils.h",
         "ExtractAddressComputation.h",
         "FastMathPatterns.h",
