--- a/tests/e2e/matmul/BUILD.bazel
+++ b/tests/e2e/matmul/BUILD.bazel
@@ -419,4 +419,102 @@ X86_64_AVX512_BF16 = X86_64_AVX512 + [
     ("f32", "f32"),
 ]]
 
+###########################################################################
+##
+## CUDA backend - VectorDistribute and TileAndFuse pipelines
+##
+###########################################################################
+
+# CUDA VectorDistribute pipeline with mma.sync (sm_80+, F16 only)
+iree_generated_e2e_runner_test(
+    name = "e2e_matmul_cuda_vecdist_f16",
+    compiler_flags = [
+        "--iree-cuda-target=sm_80",
+    ],
+    generator = ":generate_e2e_matmul_tests",
+    generator_args = [
+        "--lhs_rhs_type=f16",
+        "--acc_type=f32",
+        "--shapes=easy_large_static",
+        "--compilation_info=LLVMGPUVectorDistributeCUDA",
+    ],
+    tags = [
+        "requires-gpu-sm80",
+    ],
+    target_backends_and_drivers = [
+        ("cuda", "cuda"),
+    ],
+    test_runner = "//tools/testing/e2e:iree-e2e-matmul-test",
+    test_type = "matmul",
+)
+
+# CUDA TileAndFuse pipeline with mma.sync (sm_80+, F16 only)
+iree_generated_e2e_runner_test(
+    name = "e2e_matmul_cuda_tileandfuse_f16",
+    compiler_flags = [
+        "--iree-cuda-target=sm_80",
+    ],
+    generator = ":generate_e2e_matmul_tests",
+    generator_args = [
+        "--lhs_rhs_type=f16",
+        "--acc_type=f32",
+        "--shapes=easy_large_static",
+        "--compilation_info=LLVMGPUTileAndFuseCUDA",
+    ],
+    tags = [
+        "requires-gpu-sm80",
+    ],
+    target_backends_and_drivers = [
+        ("cuda", "cuda"),
+    ],
+    test_runner = "//tools/testing/e2e:iree-e2e-matmul-test",
+    test_type = "matmul",
+)
+
+# CUDA VectorDistribute pipeline with mma.sync F16 accumulator (sm_80+)
+iree_generated_e2e_runner_test(
+    name = "e2e_matmul_cuda_vecdist_f16_f16",
+    compiler_flags = [
+        "--iree-cuda-target=sm_80",
+    ],
+    generator = ":generate_e2e_matmul_tests",
+    generator_args = [
+        "--lhs_rhs_type=f16",
+        "--acc_type=f16",
+        "--shapes=easy_large_static",
+        "--compilation_info=LLVMGPUVectorDistributeCUDA",
+    ],
+    tags = [
+        "requires-gpu-sm80",
+    ],
+    target_backends_and_drivers = [
+        ("cuda", "cuda"),
+    ],
+    test_runner = "//tools/testing/e2e:iree-e2e-matmul-test",
+    test_type = "matmul",
+)
+
+# CUDA TileAndFuse pipeline with mma.sync F16 accumulator (sm_80+)
+iree_generated_e2e_runner_test(
+    name = "e2e_matmul_cuda_tileandfuse_f16_f16",
+    compiler_flags = [
+        "--iree-cuda-target=sm_80",
+    ],
+    generator = ":generate_e2e_matmul_tests",
+    generator_args = [
+        "--lhs_rhs_type=f16",
+        "--acc_type=f16",
+        "--shapes=easy_large_static",
+        "--compilation_info=LLVMGPUTileAndFuseCUDA",
+    ],
+    tags = [
+        "requires-gpu-sm80",
+    ],
+    target_backends_and_drivers = [
+        ("cuda", "cuda"),
+    ],
+    test_runner = "//tools/testing/e2e:iree-e2e-matmul-test",
+    test_type = "matmul",
+)
+
 # TODO(#19465): add large matmul tests for rdna3 and rdna4.
