removing double negative
Signed-off-by: Muzammiluddin Syed <muzasyed@amd.com>

--- a/tests/e2e/matmul/CMakeLists.txt
+++ b/tests/e2e/matmul/CMakeLists.txt
@@ -2013,7 +2013,7 @@ iree_generated_e2e_runner_test(
     "--mnk=10000,1024,16384"
     "--mnk_dynamicities=static,static,static"
     "--transpose_rhs"
-    "--remove_accumulator"
+    "--no-accumulate"
   TEST_RUNNER
     iree_tools_testing_e2e_iree-e2e-matmul-test
   TARGET_BACKENDS
@@ -2046,7 +2046,7 @@ iree_generated_e2e_runner_test(
     "--mnk=10000,16384,16384"
     "--mnk_dynamicities=static,static,static"
     "--transpose_rhs"
-    "--remove_accumulator"
+    "--no-accumulate"
   TEST_RUNNER
     iree_tools_testing_e2e_iree-e2e-matmul-test
   TARGET_BACKENDS
@@ -2079,7 +2079,7 @@ iree_generated_e2e_runner_test(
     "--mnk=10000,53248,16384"
     "--mnk_dynamicities=static,static,static"
     "--transpose_rhs"
-    "--remove_accumulator"
+    "--no-accumulate"
   TEST_RUNNER
     iree_tools_testing_e2e_iree-e2e-matmul-test
   TARGET_BACKENDS
@@ -2112,7 +2112,7 @@ iree_generated_e2e_runner_test(
     "--mnk=10000,53248,53248"
     "--mnk_dynamicities=static,static,static"
     "--transpose_rhs"
-    "--remove_accumulator"
+    "--no-accumulate"
   TEST_RUNNER
     iree_tools_testing_e2e_iree-e2e-matmul-test
   TARGET_BACKENDS
