--- a/compiler/src/iree/compiler/Codegen/Common/GPU/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/GPU/test/BUILD.bazel
@@ -46,6 +46,7 @@ iree_lit_test_suite(
             "gpu_infer_memory_space.mlir",
             "gpu_lower_coalesced_dma_to_global_loads.mlir",
             "gpu_nested_layout_contract_amdgpu.mlir",
+            "gpu_nested_layout_contract_nvgpu.mlir",
             "gpu_nested_layout_vector_distribution.mlir",
             "gpu_nested_layout_vector_distribution_mask.mlir",
             "gpu_nested_layout_vector_distribution_multi_reduce.mlir",
