[bindings] Link CAPIAMDGPU into libIREECompiler
Signed-off-by: Tim Gymnich <tim@gymni.ch>

--- a/compiler/src/iree/compiler/API/BUILD.bazel
+++ b/compiler/src/iree/compiler/API/BUILD.bazel
@@ -38,6 +38,7 @@ iree_compiler_cc_library(
         "//compiler/src/iree/compiler/API/Internal:IREEReduceToolEntryPoint",
         "//compiler/src/iree/compiler/API/Internal:LLDToolEntryPoint",
         "//llvm-external-projects/iree-dialects:CAPI",
+        "@llvm-project//mlir:CAPIAMDGPU",
         "@llvm-project//mlir:CAPIDebug",
         "@llvm-project//mlir:CAPIGPU",
         "@llvm-project//mlir:CAPIIR",
