--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -88,4 +88,15 @@ use_repo(
 # Configure LLVM using the llvm-raw repo (creates llvm-project)
 llvm_configure = use_repo_rule("@llvm-raw//utils/bazel:configure.bzl", "llvm_configure")
 
-llvm_configure(name = "llvm-project")
+llvm_configure(
+    name = "llvm-project",
+    targets = [
+        "AArch64",
+        "AMDGPU",
+        "ARM",
+        "NVPTX",
+        "RISCV",
+        "WebAssembly",
+        "X86",
+    ],
+)
